[project]
name = "ssh-toolkit"
version = "1.0.0"
description = "SSH connection manager with GUI"
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
    "paramiko>=3.0.0",
    "pyinstaller>=6.17.0",
]
authors = [
    { name = "Hongjun Li" }
]

[project.scripts]
ssh-toolkit = "sshTool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
